--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -1272,10 +1272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1490 373 1490 373\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(x_train), len(x_test), len(y_train), len(y_test))"
+   ]
   },
   {
    "cell_type": "code",
